# FarmConnect

./: CMakeLists.txt  README.md  main.cpp
db/json/: buyers.json  farmers.json  inverted_index.json  orders.json  products.json
include/: data_structure.hpp  helper.hpp  inverted_index.hpp  routes.hpp
src/: buyer_routes.cpp  farmer_routes.cpp  helper.cpp
static/css/buyer/: buyer_home.css  cart.css  product.css  profile.css  search.css
static/css/farmer/: dashboard.css  order.css  settings.css
templates/buyer/: buyer_home.html  cart.html  product.html  profile.html  search.html
templates/farmer/: add_product.html  edit_product.html  farmer_dashboard.html  farmer_orders.html  farmer_products.html  farmer_settings.html  order_view.html
